Use `Stream.toList()` instead of `Collector.toList()` in tests