@@ -10,7 +10,6 @@
 
 package org.junit.jupiter.engine.descriptor;
 
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -131,7 +130,7 @@ class LifecycleMethodUtilsTests {
 	}
 
 	private static List<String> namesOf(List<Method> methods) {
-		return methods.stream().map(Method::getName).collect(toList());
+		return methods.stream().map(Method::getName).toList();
 	}
 
 }
