@@ -11,7 +11,6 @@
 package org.junit.jupiter.engine.discovery;
 
 import static java.util.Collections.singleton;
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertSame;
@@ -759,7 +758,7 @@ class DiscoverySelectorResolverTests {
 	}
 
 	private List<UniqueId> uniqueIds() {
-		return engineDescriptor.getDescendants().stream().map(TestDescriptor::getUniqueId).collect(toList());
+		return engineDescriptor.getDescendants().stream().map(TestDescriptor::getUniqueId).toList();
 	}
 
 	private LauncherDiscoveryRequestBuilder request() {
